# Ai-powered-online-tutor

./: app.py  models.py  project_structure.txt  pyproject.toml  utils.py
attached_assets/: Pasted-AI-Powered-Personal-Tutor-A-Scalable-Adaptive-Learning-System-for-Enhanced-Student-Engagement-In-1739555655627.txt
database/: f.sql
instance/: tutor.db
static/css/: custom.css
static/js/: chat.js  dashboard.js
templates/: base.html  chat.html  dashboard.html  index.html  login.html  profile.html  register.html
templates/quiz/: list.html  take.html
templates/schedule/: calendar.html
